--- a/Makefile.win
+++ b/Makefile.win
@@ -17,6 +17,12 @@ NIF_BUILD_DIR = $(MIX_APP_PATH)/cmake_expty
 CMAKE_BUILD_TYPE=Release
 !ENDIF
 
+!IF "$(HAVE_NINJA)" == "true"
+CMAKE_GENERATOR_TYPE=Ninja
+!ELSE
+CMAKE_GENERATOR_TYPE=NMake Makefiles
+!ENDIF
+
 build: $(NIF_SO)
 
 $(PRIV_DIR):
@@ -31,7 +37,8 @@ $(NIF_BUILD_DIR):
 $(LIBUV_A): $(PRIV_DIR) $(LIBUV_BUILD_DIR)
 	@ if not exist "$(LIBUV_A)" ( \
 		cd "$(LIBUV_BUILD_DIR)" && \
-		cmake "$(LIBUV_SRC)" -D CMAKE_INSTALL_PREFIX="$(LIBUV_INSTALL_DIR)" \
+		cmake "$(LIBUV_SRC)" -G "$(CMAKE_GENERATOR_TYPE)" \
+		    -D CMAKE_INSTALL_PREFIX="$(LIBUV_INSTALL_DIR)" \
 			-D BUILD_TESTING=OFF && \
 		cmake --build . $(MAKE_BUILD_FLAGS) --config "$(CMAKE_BUILD_TYPE)" && \
 		cmake --install . --config "$(CMAKE_BUILD_TYPE)" \
@@ -40,7 +47,8 @@ $(LIBUV_A): $(PRIV_DIR) $(LIBUV_BUILD_DIR)
 $(NIF_SO): $(PRIV_DIR) $(NIF_BUILD_DIR) $(LIBUV_A)
 	@ if not exist "$(NIF_SO)" ( \
 		cd "$(NIF_BUILD_DIR)" && \
-		cmake "$(MAKEDIR)" -D CMAKE_INSTALL_PREFIX="$(PRIV_DIR)" \
+		cmake "$(MAKEDIR)" -G "$(CMAKE_GENERATOR_TYPE)" \
+		    -D CMAKE_INSTALL_PREFIX="$(PRIV_DIR)" \
 			-D LIBUV_INCLUDE_DIR="$(LIBUV_INSTALL_DIR)/include" \
 			-D LIBUV_LIBRARIES_DIR="$(LIBUV_INSTALL_DIR)/lib" \
 			-D C_SRC="$(C_SRC)" \
