--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,8 @@ jobs:
       ELIXIR_VERSION: "1.15.7"
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Cache OTP
         uses: actions/cache@v4
@@ -75,7 +76,8 @@ jobs:
         if: steps.cache-otp.outputs.cache-hit != 'true'
         run: |
           mkdir -p ./cache/otp
-          curl -fSL https://cocoa.build/otp/v${{ env.OTP_VERSION }}/otp-x86_64-apple-darwin.tar.gz -o ./cache/otp/otp-v${{ env.OTP_VERSION }}-x86_64-apple-darwin.tar.gz
+          export TRIPLET=x86_64-apple-darwin
+          curl -fSL https://github.com/cocoa-xu/otp-build/releases/download/v${{ env.OTP_VERSION }}/otp-${TRIPLET}.tar.gz -o ./cache/otp/otp-v${{ env.OTP_VERSION }}-${TRIPLET}.tar.gz
           cd ./cache/otp
           tar -xzf otp-v${{ env.OTP_VERSION }}-x86_64-apple-darwin.tar.gz
 
